# CScribe

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-23-experimental-mps-diarization.md  2026-06-23-mimo-multispeaker-transcriber.md  2026-06-23-resumable-transcription-pipeline.md  2026-06-24-diarization-stability.md  2026-06-24-local-asr-engine.md  2026-06-24-mimo-prompt-terms.md  2026-06-24-paragraph-blocks.md  2026-06-24-transcript-quality-worktrees.md
docs/superpowers/specs/: 2026-06-23-cli-progress-and-transcription-retry-design.md  2026-06-23-experimental-mps-diarization-design.md  2026-06-23-mimo-multispeaker-transcriber-design.md  2026-06-24-diarization-stability-design.md  2026-06-24-local-asr-engine-design.md  2026-06-24-mimo-prompt-terms-design.md  (+1 more)
src/mimo_transcriber/: __init__.py  __main__.py  audio.py  cache.py  cli.py  config.py  devices.py  diarization.py  events.py  formatter.py  keywords.py  manifest.py  mimo_asr.py  models.py  paragraphs.py  paths.py  pipeline.py  progress.py  segments.py  speaker_stability.py  state_worker.py  terms.py
tests/: test_asr_config.py  test_asr_factory.py  test_audio.py  test_cache.py  test_cli.py  test_config.py  test_devices.py  test_diarization.py  test_formatter.py  test_keywords.py  test_manifest.py  test_mimo_asr.py  test_mlx_asr.py  test_model_download.py  test_models.py  test_paragraphs.py  test_pipeline.py  test_pipeline_events.py  test_progress.py  test_segments.py  test_speaker_mapping.py  test_speaker_stability.py  test_state_worker.py  test_terms.py
(+6 files in other folders)
