[project]
name = "cscribe"
version = "0.1.0"
description = "将多人 M4A 录音按说话人分离，通过 MiMo 转写为带时间戳的中文 TXT"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "jieba>=0.42.1",
  "mlx-whisper>=0.4.2",
  "openai>=1.68.0",
  "pyannote.audio>=3.3.2",
  "python-dotenv>=1.0.1",
  "rich>=14.0",
  "torch>=2.2",
]

[project.scripts]
mimo-transcriber = "mimo_transcriber.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimo_transcriber"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
